Added ankii deck export functionality

--- a/src/popup/index.html
+++ b/src/popup/index.html
@@ -66,6 +66,11 @@
 			</tr>
 		</table>
 		<textarea class="w3-input w3-border w3-light-grey" id="exclusionList" rows="5" placeholder="Put each entry on its own line, include more of the URL to be more specific."></textarea>
-		<script src="index.js"></script>
+        <div class="w3-center" style="margin-top:10px;">
+          <button id="exportAnkiBtn" class="w3-button w3-blue">
+            Export to Anki
+          </button>
+        </div>
+        <script src="index.js"></script>
 	</body>
 </html>
