--- a/src/popup/dictionary.html
+++ b/src/popup/dictionary.html
@@ -32,6 +32,9 @@
 				</th>
 			</tr>
 		</table>
+        <div class="w3-center w3-padding">
+            <button id="exportAnkiButton" class="w3-button w3-blue">Export to Anki</button>
+        </div>
 		<script src="dictionary.js"></script>
 	</body>
 </html>
