--- a/src/popup/index.html
+++ b/src/popup/index.html
@@ -51,7 +51,22 @@
 					<a class="w3-button" href="dictionary-list.html">[Dictionaries]</a>
 				</td>
 			</tr>
+			<tr id="exclusionListMode">
+					<td class="w3-padding" style="margin-left: 900px;">
+						<label class="check-container">Whitelist:
+							<input id="whitelistCheck" type="radio" name="exclusionListMode" value="whitelist">
+							<span class="checkmark"></span>
+						</label>
+					</td>
+					<td class="w3-padding">
+						<label class="check-container">Blacklist:
+							<input id="blacklistCheck" type="radio" name="exclusionListMode" value="blacklist">
+							<span class="checkmark"></span>
+						</label>
+					</td>
+			</tr>
 		</table>
+		<textarea class="w3-input w3-border w3-light-grey" id="exclusionList" rows="5" placeholder="Put each entry on its own line, include more of the URL to be more specific."></textarea>
         <script src="index.js"></script>
 	</body>
 </html>
