Added Import/Export Functionality for the extension

--- a/src/options/index.html
+++ b/src/options/index.html
@@ -30,6 +30,11 @@
 			<input type="button" id="filterMinShareOfWordsReset" class="browser-style" value="Reset"><br>
 
 		</form>
+        <h3>Data Management</h3>
+        <button id="exportProgress" class="browser-style">Export Progress</button>
+        <button id="importProgress" class="browser-style">Import Progress</button>
+        <input type="file" id="importProgressFile" accept=".json" style="display:none">
+
 		<script src="index.js"></script>
 	</body>
 </html>
